--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -1538,7 +1538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "21bc726caef646888fb2b3f4730d0b27",
+       "model_id": "d5453e01cc31406d8486fa8145af6cef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1552,7 +1552,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f54a52657684c909448591aa02c03ea",
+       "model_id": "3e81c975e20b4fa29c5c901993155ad9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1566,7 +1566,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8dff14d7f6c94756a252b22e98b88240",
+       "model_id": "bc69a8cc2161495bb1777e85c1021e54",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2006,13 +2006,7 @@
      "output_type": "stream",
      "text": [
       "LinearRegression MAE:  9802.987140356052\n",
-      "DecisionTreeRegressor MAE:  7714.484445867494\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "DecisionTreeRegressor MAE:  7714.484445867494\n",
       "RandomForestRegressor MAE:  7522.654669540377\n",
       "SVR MAE:  14064.978242211184\n",
       "GradientBoostingRegressor MAE:  7311.217042660507\n"
@@ -2127,10 +2121,10 @@
      "output_type": "stream",
      "text": [
       "            Feature  Importance\n",
-      "3           cluster    0.546631\n",
-      "2  battery_capacity    0.208930\n",
-      "1               ram    0.200609\n",
-      "0           ratings    0.043830\n"
+      "3           cluster    0.546818\n",
+      "2  battery_capacity    0.208722\n",
+      "1               ram    0.200629\n",
+      "0           ratings    0.043831\n"
      ]
     }
    ],
@@ -2229,7 +2223,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "972633bcebf94e5495c36c1c213d3fac",
+       "model_id": "4d8b7bb7265b4ae3afca9d9d928e6084",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2243,7 +2237,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60d6de6e51834cf39937734d778ca4a7",
+       "model_id": "0b53e499fc77467a939f443190c079cc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2257,7 +2251,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a9882163dbbb4983847154b24c3fa848",
+       "model_id": "b5618d7672ae4a89a95c9dece7a5aab1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2271,7 +2265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7d7a5b98dff46c49b190160a0d98c54",
+       "model_id": "e33d245ec3bc44ef95263c0869dbbf77",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2285,7 +2279,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1697a510f8ab46649566a89a73538e44",
+       "model_id": "c0fdfb21f72e452599a8b80eec22fa17",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2299,7 +2293,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "30e944341dc44a509b8bd2bf9bdd98fa",
+       "model_id": "24a108cf71034370b2a77576217a2c5c",
        "version_major": 2,
        "version_minor": 0
       },
